--- a/project-1.html
+++ b/project-1.html
@@ -15,8 +15,8 @@
       <img src="image/logo1.png" alt="image" width="70" haight="70" class="image1">
       <div class="link1">
         <a class="l1 ll1" href="#">Home</a>
-        <a class="l1" href="#">Resource</a>
-        <a class="l1" href="#">About</a>
+        <a class="l1" href="project-1B.html">Resource</a>
+        <a class="l1" href="project-1C.html">About</a>
       </div>
     </div>
 
